# babbler

./: Makefile  README.md  pyproject.toml
src/babbler/: __init__.py  chats.py  files.py  main.py  resources.py  utils.py
src/babbler/chats/: __init__.py  adapters.py  complete.py
src/babbler/tune/: __init__.py
test-data/test_chats/: chats.jsonl
tests/: test_chats.py  test_files.py  test_resources.py
tests/chats/: test_chat_adapters.py
